POR/RefEdge/src/objects/Nomination__c.object
<CustomObject>
    <description>Custom Object to Store Nominations.(Bound 4)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Nominations</relationshipLabel>
        <relationshipName>Nominations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nominations</relationshipLabel>
        <relationshipName>Nominations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influitive_Id__c</fullName>
        <description>This represent influitive id in refedge.</description>
        <label>Influitive_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Nominations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Nomination_URL__c</fullName>
        <formula>HYPERLINK( Id, &apos;Approve/Reject&apos;, &apos;__blank&apos;)</formula>
        <label>New Nomination URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Disposition Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referenceability__c</fullName>
        <label>Referenceability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Nomination</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Disposition__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NM-{00000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>